# linamp

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
linamp/: __main__.py  app.py  config.py  library.py  messages.py  metadata.py  player.py  stations.py
linamp/screens/: browser_view.py  library_view.py  player_view.py
linamp/widgets/: file_browser.py  metadata_panel.py  now_playing.py  now_playing_bar.py  playlist_mode_indicator.py  playlist_panel.py  progress_bar.py  station_list.py  track_info.py  transport.py  visualizer.py  volume_bar.py
